# MYiot

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  docker-compose.prod.yml  docker-compose.yml  plan-backend-integration.md  spa_infographic.html
app/: Dockerfile.dev  index.html  package.json  tailwind.config.js
app/src/: App.tsx  index.css  main.tsx
app/src/api/: client.ts  mappers.ts  websocket.ts
app/src/components/: Layout.tsx  Sidebar.tsx  TopBar.tsx  WebRtcFeed.tsx
data/: go2rtc.yaml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DRIVERS.md
hub/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
hub/api/: camera_stream.py  routes.py  websocket.py
hub/auth/: config.py  manager.py  session.py
hub/core/: base_driver.py  dispatcher.py  manufacturer_maps.py  payloads.py  plugin_loader.py  state_registry.py
hub/discovery/: listener.py
hub/models/: database.py
hub/plugins/: blink.py  ecobee.py  emerson_sensi.py  eoeeies.py  generic_camera.py  govee.py  honeywell.py  ikea_tradfri.py  lifx.py  lutron_caseta.py  meross.py  mysa.py  nest.py  philips_hue.py  ring.py  simulator.py  sonoff.py  tp_link_kasa.py  wemo.py  wyze.py
hub/services/: device_manager.py  state_persistence.py
hub/tests/: conftest.py  test_auth_session.py  test_camera_stream.py  test_device_manager.py  test_generic_camera.py  test_local_driver_end_to_end.py  test_state_persistence.py  test_websocket.py
scripts/: setup.sh
(+19 files in other folders)
